<resources>
    <string name="app_name">Itap</string>
    <string name="description">shows iTap logo</string>
    <string name="descriptionTapLogoHome">show itap logo</string>
    <string name="descriptionPlaySoloButton">show playSolo button asset</string>
    <string name="descriptionPlayTogetherButton">show play together button asset</string>
    <string name="descriptionSettingsbutton">shows settings button asset</string>
    <string name="descriptionHighscoresButton">show highscore button asset</string>

    <string name="highscoresLogoDescription">show iTap highscore logo asset</string>
    <string name="rankImageDescription">show rank image asset</string>
    <string name="scoreImageDescription">show score image asset</string>
    <string name="hintNewHighscoreName">Insert your name</string>
    <string name="emptyHighscore">--</string>

    <string name="tapTargetGreenDesc">show green version of tap target in settings</string>
    <string name="tapTargetOrangeDesc">show orange version of tap target in settings</string>
    <string name="tapTargetBlueDesc">show blue version of tap target in settings</string>
    <string name="tapTargetPurpleDesc">show purple version of tap target in settings</string>
    <string name="settingsLogoDesc">show itap settings logo asset</string>

    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="rank3">3</string>
    <string name="rank4">4</string>
    <string name="rank5">5</string>
    <string name="rank6">6</string>
    <string name="rank7">7</string>
    <string name="rank8">8</string>
    <string name="rank9">9</string>
    <string name="rank10">10</string>

    <string name="passButton">Pass</string>
    <string name="beginningScore">0</string>
    <string name="timeImageDescription">show time image</string>
    <string name="TargetImageDesc">show target image</string>
    <string name="player1ImageDesc">show player1 indicator image</string>
    <string name="player2ImageDesc">show player2 indicator image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
